# rusty_vinnie

./: .gitignore  Cargo.toml  Secrets.toml.example  Shuttle.toml  tiers_history.html  tiers_history.json
bot/: .env.example  Cargo.toml
bot/src/: announce.rs  announcer.rs  challenges.rs  channel.rs  commands.rs  diablo_newsletter.rs  ea_live_updates.rs  emoji.rs  interval.rs  last_epoch.rs  main.rs  message.rs  message_handler.rs  poe_newsletter.rs  poe_teasers.rs  presence.rs  ready_handler.rs  status.rs  stream_announcer.rs  teasers.rs  time.rs
bot/src/newsletter/: diablo.rs  last_epoch.rs  mod.rs  poe.rs  utils.rs
bot/src/unused/: ea_live_updates.rs  mod.rs
crates/diablo/: Cargo.toml
crates/diablo/src/: lib.rs  main.rs
crates/diablo/tests/fixtures/: diablo_rss.xml  posts.json
crates/ea_live_updates/: Cargo.toml
crates/ea_live_updates/src/: lib.rs
crates/ea_live_updates/tests/: main.rs
crates/fresh_news/src/: lib.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs
crates/http_client/: Cargo.toml
crates/http_client/src/: lib.rs
crates/last-epoch-news/: Cargo.toml
crates/last-epoch-news/src/: lib.rs
crates/last-epoch-news/tests/: main.rs
crates/last-epoch-news/tests/fixtures/: announcements.html
crates/last_epoch_forum/: Cargo.toml
crates/last_epoch_forum/src/: content.rs  lib.rs  main.rs
crates/last_epoch_forum/tests/: main.rs
crates/last_epoch_forum/tests/fixtures/1.2.3/: expected.md  input.html
crates/markdown/: Cargo.toml
crates/markdown/src/: lib.rs
crates/markdown/tests/: markdown.rs
crates/markdown/tests/fixtures/: patch-notes-0.2.0e.md
crates/playground/: Cargo.toml
crates/playground/src/: main.rs
crates/poe_challenge_extractor/: Cargo.toml  README.md
crates/poe_challenge_extractor/src/: lib.rs  main.rs
crates/poe_forum/: Cargo.toml
crates/poe_forum/src/: lib.rs  post.rs
crates/poe_forum_embed/: Cargo.toml
crates/poe_forum_embed/src/: markdown.rs
crates/poe_forum_embed/tests/: markdown.rs
crates/poe_forum_embed/tests/fixtures/: patch-notes-0.2.0e.html  patch-notes-0.2.0e.md
crates/poe_forum_markdown/: Cargo.toml
crates/poe_forum_markdown/src/: content.rs  details.rs  lib.rs  markdown.rs  selectors.rs
crates/poe_forum_markdown/tests/: markdown.rs
crates/poe_teasers/: Cargo.toml
crates/poe_teasers/src/: lib.rs
crates/poe_teasers/tests/: load_from_forum.rs  newest_teaser_has_multiple_content_links.html  parse_markup.rs
crates/teasers/: Cargo.toml
crates/teasers/tests/: load_from_forum.rs
data/: latest-news-url.txt  threadsInfo-news-en.json  threadsInfo-news-ru.json
ea_live_updates/: Cargo.toml
ea_live_updates/src/: lib.rs
ea_live_updates/tests/: ea_updates.html  main.rs
fresh_news/: Cargo.toml  getFreshNewsUrl.js  getThreadsInfo.js
fresh_news/src/: lib.rs
playground/: Cargo.toml  response.html
playground/data/: threadsInfo-news-en.json
playground/src/: main.rs
src/: main.rs  message_handler.rs
teasers/: Cargo.toml  next_sibling.html  next_sibling.txt  teasers.txt
teasers/src/: error.rs  lib.rs
teasers/tests/: 3.25_teasers.html  load_from_forum.rs  newest_teaser_has_multiple_content_links.html  parse_markup.rs  poe2_some_teasers.html
