[workspace]
resolver = "2"
members = ["bot", "fresh_news", "playground"]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/shonya3/rusty_vinnie"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"]}
serde = { version = "1", features = ["derive"] }