[workspace]
resolver = "2"
members = ["bot", "ea_live_updates", "fresh_news", "playground", "teasers"]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/shonya3/rusty_vinnie"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"]}
serde = { version = "1", features = ["derive"] }
scraper = "0.20.0"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
serde_json = "1.0.114"
