[package]
name = "rusty_vinnie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = {git = "https://github.com/serenity-rs/poise.git", branch = "current"}
rand = "0.9.1"
tokio = { workspace = true }
reqwest.workspace = true
chrono = { workspace = true }
shuttle-runtime = "0.54.0"
shuttle-serenity = "0.54.0"
shuttle-persist = "0.51.0"
serde_json.workspace = true
futures = "0.3.31"

poe_forum = {path = "../crates/poe_forum"}
last_epoch_forum = { path = "../crates/last_epoch_forum" }
poe_teasers = { path = "../crates/poe_teasers" }
ea_live_updates = { path = "../crates/ea_live_updates" }
unicode-segmentation = "1.12.0"
