[package]
name = "fresh_news"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
scraper = "0.19.0"
