[package]
name = "last_epoch_forum"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
scraper.workspace = true
reqwest.workspace = true
serde.workspace = true
chrono.workspace = true
futures = "0.3.31"

markdown = { path = "../markdown" }
http_client = { path = "../http_client" }

[dev-dependencies]
tokio.workspace = true
