[package]
name = "playground"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {workspace = true}
fresh_news = {path = "../fresh_news"}
serde_json = "1.0.114"
scraper.workspace = true
chrono.workspace = true
serde.workspace = true
teasers = { path = "../teasers" }