[package]
name = "poe_forum"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
scraper = "0.19.0"
reqwest.workspace = true