[package]
name = "poe_forum_markdown"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
scraper.workspace = true
reqwest.workspace = true
poise = {git = "https://github.com/serenity-rs/poise.git", branch = "current"}